--- a/Styles/Styles.scss
+++ b/Styles/Styles.scss
@@ -6,8 +6,8 @@ $orange: hsl(25, 97%, 53%);
 
 $white: hsl(0, 0%, 100%);
 $light-grey: hsl(217, 12%, 63%);
-$medium-grey: hsl(216, 12%, 54%);
-$dark-blue: hsl(213, 19%, 18%);
+$medium-grey: hsla(216, 12%, 54%,.1);
+$dark-blue: hsla(213, 19%, 18%, 0.6);
 $very-dark-blue: hsl(216, 12%, 8%);
 
 @import "general";
