--- a/Styles/_card.scss
+++ b/Styles/_card.scss
@@ -29,6 +29,8 @@
             img {
                 width: 1.4rem;
             }
+
+    
         }
 
         .title {
@@ -126,7 +128,10 @@
                 width: 14.5rem;
                 margin-top: 1rem;
             }
-
+            .lottie  {
+                margin: -2rem;
+                padding: -2rem;
+            }
             //text alignment
             .text{
                 text-align: center;
